Update the build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,7 +159,7 @@ if(TARGET_WINDOWS AND NOT TARGET_UNITY)
   )
 endif()
 
-if(TARGET_WASM OR TARGET_ANDROID OR TARGET_UNITY)
+if(TARGET_ANDROID OR TARGET_UNITY)
   if(ENABLE_SHARED)
     add_library(
       noct2d
