--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: NoctVM Game Engine Docs
 repo_url: https://github.com/awemorris/NoctVM.git
+use_directory_urls: false
+
 nav:
   - Home: index.md
   - Getting Started: gettingstarted.md
