Update the Unity version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,6 +178,14 @@ elseif(NOCT2D_TARGET_HAIKU)
   set(STRATO_TARGET_HAIKU ON)
 endif()
 
+if(NOCT2D_TARGET_UNITY_SWITCH)
+  set(STRATO_TARGET_UNITY_SWITCH)
+elseif(NOCT2D_TARGET_UNITY_PS5)
+  set(STRATO_TARGET_UNITY_PS5)
+elseif(NOCT2D_TARGET_UNITY_XBOX)
+  set(STRATO_TARGET_UNITY_XBOX)
+endif()
+
 # Merge objects into libnoct2d.
 if(   NOCT2D_TARGET_IOS
    OR NOCT2D_TARGET_ANDROID
