Fix CMakeLists.txt for Haiku

--- a/external/StratoHAL/CMakeLists.txt
+++ b/external/StratoHAL/CMakeLists.txt
@@ -265,7 +265,7 @@ if(STRATO_TARGET_HAIKU)
     src/glyph.c
     src/wave.c
     src/stdfile.c
-    src/platform/bemain.cc
+    src/bemain.cc
   )
 endif()
 
